[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/LevelTransition.gd" type="Script" id=1]
[ext_resource path="res://Fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
resource_name = "transition_fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_fade_in_completed"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/LevelDisplay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transition_fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_fade_out_completed"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/LevelDisplay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="LevelTransition" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelDisplay" type="Node2D" parent="CenterContainer"]
position = Vector2( 239, 131 )

[node name="LevelNumber" type="Label" parent="CenterContainer/LevelDisplay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -35.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
text = "000"
align = 1
valign = 1

[node name="NextLevelNumber" type="Label" parent="CenterContainer/LevelDisplay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -35.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
text = "000"
align = 1
valign = 1

[node name="TotalLevels" type="Label" parent="CenterContainer/LevelDisplay"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -35.0
margin_right = 134.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 4 )
text = "/045"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transition_fade_in = SubResource( 1 )
anims/transition_fade_out = SubResource( 2 )
